[metadata]
# replace with your username:
name = lazyPathResolve-dennis9819
version = 1.0.0.
url = https://github.com/pypa/sampleproject
author = Dennis Gunia
author_email = info@dennisgunia.de
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small module for resolving a path relative to an absolute path
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.0